fix: editor z-index

--- a/src/pages/editor/prosemirror.scss
+++ b/src/pages/editor/prosemirror.scss
@@ -13,6 +13,7 @@
   font-size: 1em;
   line-height: 1.5em;
   flex-grow: 4;
+  z-index: 0;
 
   -moz-user-select: text !important;
   -webkit-user-select: text !important;
@@ -54,6 +55,7 @@
       justify-content: start;
       top: 56px;
       min-height: auto !important;
+      z-index: 1;
     }
     .ProseMirror-menubar-wrapper {
       max-width: 100% !important;
@@ -61,6 +63,7 @@
       width: 100% !important;
       flex-grow: 4;
       background-color: transparent !important;
+      z-index: 1;
     }
   }
 }
@@ -523,6 +526,7 @@ li.ProseMirror-selectednode:after {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;    
   &-wrapper {
     background: #EEE !important;
     position: relative;
@@ -530,6 +534,7 @@ li.ProseMirror-selectednode:after {
     flex-grow: 4;
     display: flex;
     flex-direction: column;
+    z-index: 1;    
   }
   &-spacer {
     display: none !important;
